// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputField snapshots renders as disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(label) + * {
  margin-top: 8px;
}

.c3 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c3:focus {
  outline: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 34px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  padding: 6px 12px;
  color: #8c959f;
  background-color: rgba(175,184,193,0.2);
  border-color: #d0d7de;
}

.c2 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  margin: 0 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

.c1 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

@media (min-width:768px) {
  .c2 {
    font-size: 14px;
  }
}

<div
  className="c0"
  display="flex"
  width="100%"
>
  <label
    className="c1"
    htmlFor="__primer_id_10002"
  >
    Name
  </label>
  <span
    className="c2 TextInput-wrapper"
    disabled={true}
  >
    <input
      aria-describedby=""
      className="c3"
      disabled={true}
      id="__primer_id_10002"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInputField snapshots renders as required 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * + * {
  margin-top: 8px;
}

<div
  className="c0"
  display="flex"
  width="100%"
/>
`;

exports[`TextInputField snapshots renders with a caption 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * + * {
  margin-top: 8px;
}

.c3 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c3:focus {
  outline: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 34px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  padding: 6px 12px;
}

.c2 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  margin: 0 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

.c1 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #24292f;
}

.c4 {
  font-size: 12px;
  color: #57606a;
  display: block;
}

@media (min-width:768px) {
  .c2 {
    font-size: 14px;
  }
}

<div
  className="c0"
  display="flex"
  width="100%"
>
  <label
    className="c1"
    htmlFor="__primer_id_10004"
  >
    Name
  </label>
  <span
    className="c2 TextInput-wrapper"
  >
    <input
      aria-describedby="__primer_id_10004-caption"
      className="c3"
      id="__primer_id_10004"
      type="text"
    />
  </span>
  <span
    className="c4"
    color="fg.muted"
    display="block"
    fontSize={0}
    id="__primer_id_10004-caption"
  >
    Hint: your first name
  </span>
</div>
`;

exports[`TextInputField snapshots renders with a custom ID 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * + * {
  margin-top: 8px;
}

<div
  className="c0"
  display="flex"
  width="100%"
/>
`;

exports[`TextInputField snapshots renders with a hidden label 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(label) + * {
  margin-top: 8px;
}

.c3 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c3:focus {
  outline: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 34px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  padding: 6px 12px;
}

.c2 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  margin: 0 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

.c1 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

@media (min-width:768px) {
  .c2 {
    font-size: 14px;
  }
}

<div
  className="c0"
  display="flex"
  width="100%"
>
  <label
    className="c1"
    htmlFor="__primer_id_10001"
  >
    Name
  </label>
  <span
    className="c2 TextInput-wrapper"
  >
    <input
      aria-describedby=""
      className="c3"
      id="__primer_id_10001"
      type="text"
    />
  </span>
</div>
`;

exports[`TextInputField snapshots renders with a label an input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * + * {
  margin-top: 8px;
}

<div
  className="c0"
  display="flex"
  width="100%"
/>
`;

exports[`TextInputField snapshots renders with a successful validation message 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * + * {
  margin-top: 8px;
}

.c4 {
  margin-right: 4px;
}

.c1 {
  height: auto;
  overflow: hidden;
}

.c2 {
  -webkit-animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
  animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
}

.c3 {
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #1a7f37;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c3 a {
  color: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="c0"
  display="flex"
  width="100%"
>
  <div
    className="c1"
    height="auto"
    overflow="hidden"
  >
    <div
      className="c2"
      onAnimationEnd={[Function]}
    >
      <span
        className="c3"
        color="success.fg"
        display="flex"
        fontSize={0}
      >
        <span
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-check-circle-fill"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path fill-rule=\\"evenodd\\" d=\\"M6 0a6 6 0 100 12A6 6 0 006 0zm-.705 8.737L9.63 4.403 8.392 3.166 5.295 6.263l-1.7-1.702L2.356 5.8l2.938 2.938z\\"></path>",
              }
            }
            fill="currentColor"
            height={12}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "overflow": "visible",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 12 12"
            width={12}
          />
        </span>
        <span
          id="__primer_id_10005-validationMsg"
        >
          This name is valid
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`TextInputField snapshots renders with an error validation message 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * + * {
  margin-top: 8px;
}

.c7 {
  margin-right: 4px;
}

.c4 {
  height: auto;
  overflow: hidden;
}

.c3 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c3:focus {
  outline: 0;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 34px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  padding: 6px 12px;
}

.c2 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  margin: 0 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

.c1 {
  font-weight: 600;
  font-size: 14px;
  display: block;
  color: #24292f;
}

.c5 {
  -webkit-animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
  animation: 170ms eGcHP cubic-bezier(0.44,0.74,0.36,1);
}

.c6 {
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #cf222e;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c6 a {
  color: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (min-width:768px) {
  .c2 {
    font-size: 14px;
  }
}

<div
  className="c0"
  display="flex"
  width="100%"
>
  <label
    className="c1"
    htmlFor="__primer_id_10006"
  >
    Name
  </label>
  <span
    className="c2 TextInput-wrapper"
  >
    <input
      aria-describedby="__primer_id_10006-validationMsg"
      className="c3"
      id="__primer_id_10006"
      type="text"
    />
  </span>
  <div
    className="c4"
    height="auto"
    overflow="hidden"
  >
    <div
      className="c5"
      onAnimationEnd={[Function]}
    >
      <span
        className="c6"
        color="danger.fg"
        display="flex"
        fontSize={0}
      >
        <span
          className="c7"
        >
          <svg
            aria-hidden="true"
            className="octicon octicon-alert-fill"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path fill-rule=\\"evenodd\\" d=\\"M4.855.708c.5-.896 1.79-.896 2.29 0l4.675 8.351a1.312 1.312 0 01-1.146 1.954H1.33A1.312 1.312 0 01.183 9.058L4.855.708zM7 7V3H5v4h2zm-1 3a1 1 0 100-2 1 1 0 000 2z\\"></path>",
              }
            }
            fill="currentColor"
            height={12}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "overflow": "visible",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 12 12"
            width={12}
          />
        </span>
        <span
          id="__primer_id_10006-validationMsg"
        >
          Your first name cannot contain spaces
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`TextInputField snapshots renders with the input as a TextInputWithTokens 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * + * {
  margin-top: 8px;
}

<div
  className="c0"
  display="flex"
  width="100%"
/>
`;
